--- a/842904202/training_reports/4.5.md
+++ b/842904202/training_reports/4.5.md
@@ -37,11 +37,4 @@
 
 | HDU1722 | 数学 | 算GCD | 
 | :-: | :-: | :-: | 
-| [A - Cake](https://vjudge.net/contest/220479#problem/A) |
-
-
-
-
-| CodeForces - 741A  | 图，环| 环的遍历，GCD | 
-| :-: | :-: | :-: | 
-| [Arpa's loud Owf and Mehrdad's evil plan ](https://vjudge.net/contest/220479#problem/J) |  
+| [A - Cake](https://vjudge.net/contest/220479#problem/A) | 水题 | 注意块数等于边数-1 | 
